--- a/elasticjob-demo/pom.xml
+++ b/elasticjob-demo/pom.xml
@@ -16,9 +16,8 @@
     </parent>
     <dependencies>
         <dependency>
-            <groupId>org.apache.shardingsphere.elasticjob</groupId>
-            <artifactId>elasticjob-lite-spring-boot-starter</artifactId>
-            <version>3.0.4</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>com.dangdang</groupId>
